--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,19 @@
+body {
+    background-color: #efeee7;
+    font: "Times New Roman";
+    color: #333333;
+    margin: 0;
+    padding: 0;
+}
+
+header {
+    background-color: #333333;
+}
+
 h1 {
     margin-bottom: 15px;
-    font-size: 60px;
-    color: white;
+    font-size: 28px;
+    color: #eee;
     text-align: center;
     text-decoration: underline;
     background-color: black;
@@ -10,8 +22,9 @@ h1 {
 h2 {
     margin-top: 15px;
     margin-bottom: 15px;
-    font-size: 40px;
+    font-size: 24px;
     text-align: center;
+    margin: 0 auto;
 }
 
 h3 {
@@ -20,10 +33,12 @@ h3 {
     text-align: center;
 }
 
-img {
+#bio-image {
     margin-left: auto;
     margin-right: auto;
     display: block;
+    width: 200px;
+    float: left;
 }
 
 p {
@@ -38,4 +53,13 @@ ul {
     border-style: solid;
     border-width: 5px;
     list-style-position: inside;
+}
+
+#main-bio {
+    float: left;
+    width: 70%;
+}
+
+#contact-info {
+    width: 30%;
 }
