added contact and portfolio page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 body {
-    background-color: #efeee7;
-    background-image: url("assets\images\0F544631-.jpg") repeat;
-    font-family: "Arial";
+    /* background-color: #efeee7; */
+    background-image: url("../images/paisley.png");
+    font-family: "Arial, Helvetica Neue, Helvetica, sans-serif";
     color: #777777;
     margin: auto;
     padding: 0;
@@ -13,7 +13,7 @@ a:link, a:visited {
 }
 
 a:hover {
-    color: black;
+    color: yellow;
 }
 
 header {
@@ -79,13 +79,11 @@ p {
     line-height: 1.5;
 }
 
-ul {
+/* ul {
     text-align: center;
     font-size: 35px;
-    border-style: solid;
-    border-width: 5px;
     list-style-position: inside;
-}
+} */
 
 div {
     background: transparent;
@@ -101,6 +99,10 @@ footer {
     text-align: center;
     padding-top: 45px;
     padding-bottom: 10px;
+}
+
+.footer1 {
+    position: relative;
 }
 
 .headercontent {
@@ -120,7 +122,108 @@ footer {
     top: 35px
 }
 
+.row {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0 4px;
+}
+
+.column {
+    flex: 50%;
+    max-width: 50%;
+    padding: 0 4px;
+}
+
+.column img {
+    margin-top: 8px;
+    vertical-align: middle;
+    position: relative;
+}
+
+.image {
+    position: relative;
+}
+
 .about {
     padding-left: 20px;
     padding-right: 20px;    
+}
+
+/* .text-block {
+    position: absolute;
+    bottom: 20px;
+    background-color: #4aaaa5;
+    color: #eee;
+} */
+
+/* h4 {
+    position: relative;
+
+} */
+
+.form-style-1 {
+    text-align: left;
+    margin:10px auto;
+    max-width: auto;
+    padding: 20px 12px 10px 20px;
+    font: 13px "Lucida Sans Unicode", "Lucida Grande", sans-serif;
+}
+.form-style-1 li {
+    padding: 0;
+    display: block;
+    list-style: none;
+    margin: 10px 0 0 0;
+}
+.form-style-1 label{
+    margin:0 0 3px 0;
+    padding:0px;
+    display:block;
+    font-weight: bold;
+}
+.form-style-1 input[type=text], 
+.form-style-1 input[type=email],
+textarea, 
+select{
+    border:1px solid #BEBEBE;
+    padding: 7px;
+    margin:0px;
+    -webkit-transition: all 0.30s ease-in-out;
+    -moz-transition: all 0.30s ease-in-out;
+    -ms-transition: all 0.30s ease-in-out;
+    -o-transition: all 0.30s ease-in-out;
+    outline: none;  
+}
+.form-style-1 input[type=text]:focus, 
+.form-style-1 input[type=email]:focus,
+.form-style-1 textarea:focus, 
+.form-style-1 select:focus{
+    -moz-box-shadow: 0 0 8px #88D5E9;
+    -webkit-box-shadow: 0 0 8px #88D5E9;
+    box-shadow: 0 0 8px #88D5E9;
+    border: 1px solid #88D5E9;
+}
+.form-style-1 .field-divided{
+    width: 97%;
+}
+
+.form-style-1 .field-long{
+    width: 97%;
+}
+.form-style-1 .field-select{
+    width: 97%;
+}
+.form-style-1 .field-textarea{
+    height: 100px;
+}
+.form-style-1 input[type=submit], .form-style-1 input[type=button]{
+    background: #4B99AD;
+    padding: 8px 15px 8px 15px;
+    border: none;
+    color: #fff;
+}
+.form-style-1 input[type=submit]:hover, .form-style-1 input[type=button]:hover{
+    background: #4691A4;
+    box-shadow:none;
+    -moz-box-shadow:none;
+    -webkit-box-shadow:none;
 }
