--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,12 +56,6 @@ h2 {
     padding-left: 5px;
 }
 
-/* h3 {
-    margin-top: 15px;
-    font-size: 20px;
-    text-align: center;
-} */
-
 #bio-image {
     margin-left: 20px;
     margin-right: 20px;
@@ -77,16 +71,6 @@ p {
     margin: 10px;
     line-height: 1.5;
 }
-
-/* ul {
-    text-align: center;
-    font-size: 35px;
-    list-style-position: inside;
-} */
-
-/* div {
-    background: transparent;
-} */
 
 footer {
     background: #666666;
@@ -124,21 +108,10 @@ footer {
 .row {
     display: flex;
     flex-wrap: wrap;
-    padding: 0 4px;
+    padding-bottom: 50px;
     width: 100%;
+    height: 425px;
 }
-
-/* .column {
-    flex: 50%;
-    max-width: 50%;
-    padding: 0 4px;
-} */
-
-/* .column img {
-    margin-top: 8px;
-    vertical-align: middle;
-    position: relative;
-} */
 
 .image {
     position: relative;
@@ -153,10 +126,10 @@ footer {
 .text-block {
     position: absolute;
     bottom: 20%;
-    width: 80%;
+    width: 200px;
     background-color: #4aaaa5;
     color: #eee;
-    padding: 5px;
+    padding: 5px 0 5px 0;
     text-align: center;
     right: 20px;
 }
